--- a/res/untitled.ui
+++ b/res/untitled.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>508</width>
-    <height>507</height>
+    <height>547</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -238,7 +238,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>450</y>
+     <y>480</y>
      <width>59</width>
      <height>15</height>
     </rect>
@@ -582,7 +582,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Утки</string>
+    <string>УткиX11</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="radioButton_2">
@@ -614,8 +614,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>480</y>
+     <x>140</x>
+     <y>520</y>
      <width>80</width>
      <height>23</height>
     </rect>
@@ -627,8 +627,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>480</y>
+     <x>230</x>
+     <y>520</y>
      <width>80</width>
      <height>23</height>
     </rect>
@@ -640,8 +640,8 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>480</y>
+     <x>320</x>
+     <y>520</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -654,7 +654,7 @@
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>480</y>
+     <y>520</y>
      <width>80</width>
      <height>23</height>
     </rect>
@@ -981,7 +981,7 @@
      <x>80</x>
      <y>0</y>
      <width>20</width>
-     <height>451</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="orientation">
@@ -1007,7 +1007,7 @@
      <x>160</x>
      <y>0</y>
      <width>16</width>
-     <height>451</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="orientation">
@@ -1181,6 +1181,45 @@
    </property>
    <property name="text">
     <string>Куры 48&gt;н.</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_54">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>450</y>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Премикс8201</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_15">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>450</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>0</string>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="radioButton_5">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>230</y>
+     <width>100</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Утки 1-7д</string>
    </property>
   </widget>
  </widget>
