--- a/res/untitled2.ui
+++ b/res/untitled2.ui
@@ -869,14 +869,24 @@
   <widget class="QPushButton" name="pushButton_5">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>290</y>
-     <width>101</width>
-     <height>24</height>
+     <x>410</x>
+     <y>220</y>
+     <width>31</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>+ компонент</string>
+    <string>+ </string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>220</y>
+     <width>71</width>
+     <height>20</height>
+    </rect>
    </property>
   </widget>
  </widget>
